# simple-hunt

./: README.md  simple-hunt.cabal
app/: Main.hs
src/: FctIndexerCore.hs  JsonUtil.hs  Main2.hs  MainHoogle.hs  PackageInfo.hs  PkgIndexerCore.hs  PkgIndexerCore2.hs  Process.hs  ProcessCabal.hs  ProcessHoogle.hs  TarUtil.hs  TarUtil2.hs  TestHoogle.hs
src/Hayoo/Hunt/: ApiDocument.hs  IndexSchema.hs
src/Hunt/: ClientInterface.hs
src/Hunt/Common/: ApiDocument.hs  BasicTypes.hs  DocDesc.hs
src/Hunt/Interpreter/: BasicCommand.hs  Command.hs
src/Hunt/Query/Language/: Grammar.hs
src/Hunt/Scoring/: Score.hs
