name:                simple-hunt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, PackageInfo, Hunt.Common.DocDesc, Hunt.Common.ApiDocument
                       , Hunt.Query.Language.Builder
                       , Hunt.Query.Language.Grammar
                       , Hunt.Scoring.Score
                       , Hayoo.Hunt.IndexSchema
                       -- , PkgIndexerCore
                       , Hunt.Interpreter.BasicCommand
                       , Hunt.Interpreter.Command
                       , Hunt.ClientInterface
  build-depends:       base >= 4.7 && < 5, containers, bytestring, text, binary, deepseq, unordered-containers, aeson, text-binary, time,
                       old-locale, data-default
  default-language:    Haskell2010

executable simple-hunt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-hunt
  default-language:    Haskell2010

test-suite simple-hunt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-hunt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
