name:                simple-hunt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PackageInfo
                       , ParseCabal
                       , TarUtil
                       , Hayoo.PackageRank
                       , Hayoo.FunctionInfo
                       , ProcessCabal
                       , JsonUtil
                       , PkgIndexerCore2
                       , FctIndexerCore
                       , Hayoo.ParseSignature
                       , HoogleProcessLine
                       , ParseHoogle
                       , Main2
                       , TestHoogle
                       , ProcessHoogle
                       , ProcessLine
  build-depends:       base >= 4.7 && < 5, containers, bytestring, text, binary, deepseq,
                       unordered-containers, aeson, text-binary, time, old-locale, data-default, Cabal,
                       transformers, tar, zlib, bzlib, pipes, pipes-parse, pretty-show, pipes-group,
                       unordered-containers, lens, aeson-pretty, vector, scientific, mtl, parsec,
                       hxt-charproperties, filepath
  default-language:    Haskell2010

executable simple-hunt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, aeson, aeson-pretty, bytestring, directory, filepath, time
                     , simple-hunt, pipes, text, containers, scientific
  default-language:    Haskell2010

test-suite simple-hunt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-hunt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
